La till Checkbox för kopia till Kund. (Får fram Felmeddelande om Reportviewer)

--- a/ReportsApplication1/Reparationsunderlag.csproj
+++ b/ReportsApplication1/Reparationsunderlag.csproj
@@ -148,6 +148,7 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ReparationsUnderlag_Rapport - Copy.rdlc" />
     <EmbeddedResource Include="Report1.rdlc" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
