--- a/ReportsApplication1/Reparationsunderlag.csproj
+++ b/ReportsApplication1/Reparationsunderlag.csproj
@@ -148,7 +148,6 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ReparationsUnderlag_Rapport - Copy.rdlc" />
     <EmbeddedResource Include="Report1.rdlc" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -160,7 +159,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="ReparationsUnderlag_Rapport.rdlc" />
     <EmbeddedResource Include="Splashscreen.resx">
       <DependentUpon>Splashscreen.cs</DependentUpon>
     </EmbeddedResource>
@@ -210,6 +208,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="ReparationsUnderlag_Rapport.rdl" />
     <None Include="Reparationsunderlag_TemporaryKey.pfx" />
     <None Include="ReportsApplication1_TemporaryKey.pfx" />
   </ItemGroup>
