--- a/ReportsApplication1/Reparationsunderlag.csproj
+++ b/ReportsApplication1/Reparationsunderlag.csproj
@@ -10,7 +10,7 @@
     <AssemblyName>Reparationsunderlag</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>\\192.168.0.117\Data\Reparationsunderlag_Installfolder_Beta\</PublishUrl>
+    <PublishUrl>\\192.168.0.117\Data\Reparationsunderlag_Installfolder\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Unc</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -20,14 +20,14 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>true</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <InstallUrl>\\192.168.0.117\Data\Reparationsunderlag_Installfolder_Beta\</InstallUrl>
-    <ProductName>Reparationsunderlag - TEST</ProductName>
+    <InstallUrl>\\192.168.0.117\Data\Reparationsunderlag_Installfolder\</InstallUrl>
+    <ProductName>Reparationsunderlag</ProductName>
     <PublisherName>Sandbergs Järn</PublisherName>
-    <MinimumRequiredVersion>0.5.1.127</MinimumRequiredVersion>
+    <MinimumRequiredVersion>1.11.1.1</MinimumRequiredVersion>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>21</ApplicationRevision>
-    <ApplicationVersion>1.8.1.%2a</ApplicationVersion>
+    <ApplicationRevision>6</ApplicationRevision>
+    <ApplicationVersion>1.11.5.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
