--- a/ReportsApplication1/App.config
+++ b/ReportsApplication1/App.config
@@ -28,6 +28,9 @@
     <add name="Reparationsunderlag.Properties.Settings.PENGVIN_DATA01ConnectionString"
       connectionString="Data Source=192.168.0.117;Initial Catalog=PENGVIN_DATA01;Persist Security Info=True;User ID=sa;Password=S4ndb3rgsj4rn"
       providerName="System.Data.SqlClient" />
+    <add name="Reparationsunderlag.Properties.Settings.Reparationsunderlag_SelectionConnectionString"
+      connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Reparationsunderlag_Selection.mdf;Integrated Security=True;Connect Timeout=30"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
