--- a/ReportsApplication1/Reparationsunderlag.csproj
+++ b/ReportsApplication1/Reparationsunderlag.csproj
@@ -10,7 +10,7 @@
     <AssemblyName>Reparationsunderlag</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>\\HEMMASERVER\Data\Reparationsunderlag_Installfolder\</PublishUrl>
+    <PublishUrl>\\DESKTOP-IHDVKIH\Data\Reparationsunderlag_Installfolder\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Unc</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -20,13 +20,13 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>true</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <InstallUrl>\\HEMMASERVER\Data\Reparationsunderlag_Installfolder\</InstallUrl>
+    <InstallUrl>\\DESKTOP-IHDVKIH\Data\Reparationsunderlag_Installfolder\</InstallUrl>
     <ProductName>Reparationsunderlag</ProductName>
     <PublisherName>Sandbergs Järn</PublisherName>
-    <MinimumRequiredVersion>1.11.1.1</MinimumRequiredVersion>
+    <MinimumRequiredVersion>3.1.1.1</MinimumRequiredVersion>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationRevision>17</ApplicationRevision>
     <ApplicationVersion>3.1.1.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
